[tool.poetry]
name = "toby"
version = "0.0.1"
description = "A purely declarative constraint programming language"
authors = ["Datavenia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.analysis.dependencies]
prospector = "^1.7.7"


[tool.poetry.group.format.dependencies]
black = "^22.8.0"


[tool.poetry.group.types.dependencies]
mypy = "^0.971"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
hypothesis = "^6.54.5"
mutmut = "^2.4.1"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
